kubernetes/clusters/tortuga-k8s01/apps/kube-system/host-firewall/ccnp-host-default-deny.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.freckle.systems/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
# Default deny all host ingress on tortuga. Allow rules are in separate CCNPs.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-default-deny
spec:
  nodeSelector:
    matchLabels:
      kubernetes.io/hostname: tortuga-cn01
  enableDefaultDeny:
    ingress: true
  ingress: []
