kubernetes/clusters/tortuga-k8s01/apps/kube-system/host-firewall/ccnp-host-icmp.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.freckle.systems/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
# Allow ICMP (ping) from anywhere to all nodes.
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-allow-icmp
spec:
  nodeSelector: {}
  enableDefaultDeny:
    ingress: false
  ingress:
    - icmps:
        - fields:
            - type: 8
              family: IPv4
            - type: 128
              family: IPv6
